--- a/map-api/helm/values.yaml
+++ b/map-api/helm/values.yaml
@@ -40,7 +40,7 @@ securityContext: {}
 service:
   type: NodePort
   port: 80
-  targetPort: 3000
+  targetPort: 80
   nodePort: 
 
 ingress:
@@ -73,14 +73,14 @@ env:
 
 livenessProbe:
   httpGet:
-    path: /health
+    path: /
     port: http
   initialDelaySeconds: 15
   periodSeconds: 20
 
 readinessProbe:
   httpGet:
-    path: /health
+    path: /
     port: http
   initialDelaySeconds: 5
   periodSeconds: 10
