--- a/my-web/helm/values.yaml
+++ b/my-web/helm/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: 10.2.2.40:5000/library/my-web
+  repository: 10.2.2.40:5000/library/integrated-dashboard
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "4"
+  tag: "manual-v3"
 
 imagePullSecrets:
   - name: harbor-secret
