--- a/energy-api/helm/values.yaml
+++ b/energy-api/helm/values.yaml
@@ -38,18 +38,18 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: NodePort
+  type: ClusterIP
   port: 80
   targetPort: 8000
   nodePort: 
 
 ingress:
-  enabled: false
-  className: ""
+  enabled: true
+  className: "nginx"
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  host: "myapp.antigravity.local"
+  host: "energy-api.antigravity.local"
   paths:
     - path: /
       pathType: Prefix
