--- a/kma-api/helm/values.yaml
+++ b/kma-api/helm/values.yaml
@@ -49,10 +49,11 @@ ingress:
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  host: "kma-api.antigravity.local"
-  paths:
-    - path: /
-      pathType: Prefix
+  hosts:
+    - host: "kma-api.antigravity.local"
+      paths:
+        - path: /
+          pathType: Prefix
 
 resources: {}
   # limits:
