--- a/energy-api/helm/values.yaml
+++ b/energy-api/helm/values.yaml
@@ -67,7 +67,15 @@ nodeSelector: {}
 
 tolerations: []
 
-affinity: {}
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: role
+          operator: In
+          values:
+          - energy
 
 env:
   NODE_ENV: production
