--- a/kma-api/helm/values.yaml
+++ b/kma-api/helm/values.yaml
@@ -50,7 +50,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: "kma-api.antigravity.local"
+    - host: "10.2.2.101"
       paths:
         - path: /
           pathType: Prefix
