--- a/my-web/helm/values.yaml
+++ b/my-web/helm/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 2
 
 image:
   repository: 10.2.2.40:5000/library/integrated-dashboard
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
@@ -50,7 +50,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: "my-web.antigravity.local"
+    - host: "10.2.2.101"
       paths:
         - path: /
           pathType: Prefix
