--- a/kma-api/helm/values.yaml
+++ b/kma-api/helm/values.yaml
@@ -1,13 +1,13 @@
-# Default values for myapp.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+# myapp에 대한 기본값입니다.
+# 이 파일은 YAML 형식입니다.
+# 템플릿으로 전달될 변수들을 여기서 선언합니다.
 
 replicaCount: 2
 
 image:
   repository: 10.2.2.40:5000/library/kma-api
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
+  pullPolicy: Always
+  # 차트의 기본 appVersion 대신 사용할 이미지 태그를 덮어씁니다.
   tag: "latest"
 
 imagePullSecrets:
@@ -16,26 +16,26 @@ nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
-  # Specifies whether a service account should be created
+  # 서비스 계정을 생성할지 여부를 지정합니다.
   create: true
-  # Annotations to add to the service account
+  # 서비스 계정에 추가할 어노테이션(Annotations)입니다.
   annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
+  # 사용할 서비스 계정의 이름입니다.
+  # 설정하지 않고 create가 true일 경우, fullname 템플릿을 사용하여 이름이 자동 생성됩니다.
   name: ""
 
 podAnnotations: {}
 
 podSecurityContext: {}
-  # fsGroup: 2000
+  # fsGroup: 2000 (볼륨 마운트 시 파일 소유 그룹 ID)
 
 securityContext: {}
   # capabilities:
   #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+  #   - ALL (모든 권한 제거)
+  # readOnlyRootFilesystem: true (루트 파일 시스템을 읽기 전용으로 설정)
+  # runAsNonRoot: true (루트 권한으로 실행 금지)
+  # runAsUser: 1000 (컨테이너를 실행할 사용자 ID)
 
 service:
   type: ClusterIP
@@ -48,18 +48,20 @@ ingress:
   className: "nginx"
   annotations: {}
     # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+    # kubernetes.io/tls-acme: "true" (TLS 인증서 자동 발급 관련)
   hosts:
+    # ✅ 중요: IP(10.2.2.101) 대신 도메인을 사용하여 다른 앱(Energy, Web)과 충돌을 방지합니다.
+    # PC의 hosts 파일에 "10.2.2.101 kma-api.local" 을 추가해서 접속하세요.
     - host: "10.2.2.101"
       paths:
         - path: /
           pathType: Prefix
 
 resources: {}
-  # limits:
+  # limits: (리소스 최대 사용량 제한)
   #   cpu: 100m
   #   memory: 128Mi
-  # requests:
+  # requests: (리소스 최소 보장량 요청)
   #   cpu: 100m
   #   memory: 128Mi
 
